--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "grunt-phpcs": "^0.2.3",
     "grunt-phplint": "0.0.5",
     "grunt-phpunit": "^0.3.6",
-    "load-grunt-config": "^0.16.0"
+    "load-grunt-config": "^0.16.0",
+    "time-grunt": "^1.0.0"
   }
 }
