--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "grunt-jscs": "^0.8.1",
     "grunt-php": "^1.1.1",
     "grunt-phpcs": "^0.2.3",
+    "grunt-phpdocumentor": "^0.4.1",
     "grunt-phplint": "0.0.5",
     "grunt-phpunit": "^0.3.6",
     "load-grunt-config": "^0.16.0",
